# loop

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  Acton.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  design-qa.md  eslint.config.mjs  package-lock.json  package.json  progress.md
.github/: dependabot.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  bot.py  chain_worker.py  config.py  control_routes.py  control_state.py  cycles.py  database.py  dependencies.py  duel_v11_preflight.py  main.py  metrics.py  models.py  nonce_store.py  onchain_audit.py  rating.py  routes.py  schemas.py  security.py  ton.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/bank/: __init__.py  models.py  router.py
apps/api/app/modules/duel/: __init__.py  math.py  models.py  router.py
apps/api/loop_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260721_0001_initial.py  20260721_0002_social_cycles.py  20260721_0003_bound_challenges.py  20260721_0004_split_bank_duel.py  20260721_0005_permissionless_projection.py  20260722_0006_duel_v11.py  20260723_0007_control_panel.py
apps/api/tests/: conftest.py  test_api.py  test_bot.py  test_chain_worker.py  test_control.py  test_duel_canary_operations.py  test_duel_v11_preflight.py  test_rating.py  test_routes_hardening.py  test_security.py  test_ton.py
contracts/: DuelEscrow.tolk  storage.tolk
deploy/: Dockerfile.api  activate-release.sh  backup-postgres.sh
(+108 files in other folders)
